--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@
 	outline: none;
 	box-sizing: border-box;
 	transition: all .3s ease-in-out;
+
 }
 a{
 	text-decoration: none;
@@ -71,7 +72,6 @@ body:after{
 	left: 0;
 	right: 0;
 	background: url('../images/img/bg2.png');
-	background-size: 80%, 80%;
 	background-size:cover;
 	background-repeat: no-repeat;
 	opacity:1;
@@ -115,10 +115,41 @@ body:after{
 	justify-content: space-around;
 	float: left;
 }
-.product__image{
-	padding:30px 0;
+.product__image {
+    margin: 30px 0;
+    overflow: hidden;
+    transition: top 2s;
+    width: 100%;
+    height: 284px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
+.product__image-img{
+  margin: 70px 0;
+  max-width: 329px;
+  height: 280px;
+  object-fit: contain;
 
+}
+#slider-image-1:target ~ .image-holder
+      {
+          top: 0px;
+      }
+#slider-image-2:target ~ .image-holder
+       {
+          top: -800px;
+       }
+
+#slider-image-3:target ~ .image-holder
+      {
+          top: -1600px;
+       }
+#slider-image-4:target ~ .image-holder
+      {
+           top: -2400px;
+       }
 .product__list{
 	display: -webkit-flex;
 	display: -ms-flex;
@@ -133,7 +164,7 @@ body:after{
 	height: 10px;
 	width: 10px;
 	border-radius: 50%;
-	margin-top:10px;
+  border: 1px solid lightgray;
 }
 .product__list-items:nth-child(1){
 	background: #1f273f;
@@ -148,8 +179,8 @@ body:after{
 	background: #29e3ea;
 }
 .product__list-items:hover{
-	transition: all .3s;
-	transform: scale(1.3);
+	transition: all .2s;
+	transform: scale(2);
 }
 
 .description{
@@ -207,7 +238,7 @@ body:after{
   }
 
   .rating__icon--star {
-    color: orange;
+    color: Gold;
   }
 
   .rating__input:checked ~ .rating__label .rating__icon--star {
@@ -215,7 +246,7 @@ body:after{
   }
 
   .rating-group:hover .rating__label .rating__icon--star {
-    color: orange;
+    color: Gold;
   }
 
   .rating__input:hover ~ .rating__label .rating__icon--star {
@@ -228,18 +259,17 @@ body:after{
 
 
 	/*_Buttons_____________________________________________________*/
-.item__buttons{
+.button__wraper{
 	display: flex;
 	flex-direction:row;
 }
-.item__buttons .item__button{
+.item__button{
 	width: 69px;
 	height: 32px;
-}
-.item__button{
 	border: 1px solid rgba(255, 255, 255, .26);
 	background-color: #111a28;
 }
+
 .item__button--qty{
 	margin-left: 3px;
 }
