--- a/css/styles.css
+++ b/css/styles.css
@@ -22,11 +22,11 @@
 	outline: none;
 	box-sizing: border-box;
 	transition: all .3s ease-in-out;
-
 }
 a{
 	text-decoration: none;
 }
+
 img {
 	max-width: 100%;
 	height: auto;
@@ -51,6 +51,7 @@ body, html {
 body{
 	font-family: var(--font-main);
 }
+
 body:before{
 	content: '';
 	position: absolute;
@@ -64,6 +65,7 @@ body:before{
 	pointer-events: none;
 	z-index: -1;
 }
+
 body:after{
 	content: '';
 	position: absolute;
@@ -79,6 +81,7 @@ body:after{
 	background-color: #c5c5c8;
 	z-index: -2;
 }
+
 .container{
 	margin: 32vh auto;
 	width: 690px;
@@ -87,23 +90,28 @@ body:after{
 	border-radius: 10px;
 	background-color: #111a28;
 }
+
 .header{
 	width: 100%;
 	height: 80px;
 	padding: 3.5% 3.5% 3.05% 3.05%;
 }
+
 .header__logo{
 	width: 65px;
 	height: 33px;
 	display: block;
 }
+
 .header__logo-img{
 	/* object-fit: fill; */
 }
+
 .content{
 	width: 100%;
 	height: calc(100% - 80px);
 }
+
 .product{
 	width: 61%;
 	height: calc(100% - 21px);
@@ -115,41 +123,44 @@ body:after{
 	justify-content: space-around;
 	float: left;
 }
+
 .product__image {
-    margin: 30px 0;
     overflow: hidden;
-    transition: top 2s;
     width: 100%;
     height: 284px;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    flex-direction: row;
+    justify-content: space-space-between;
     align-items: center;
+    /* padding-left: 20px; */
 }
+
 .product__image-img{
-  margin: 70px 0;
-  max-width: 329px;
-  height: 280px;
+  margin: 0 20px 0 20px;
+  min-width: 400px;
+  height: auto;
   object-fit: contain;
-
+  position: relative;
 }
-#slider-image-1:target ~ .image-holder
+
+#slider-image-1:target ~ .product__image
       {
-          top: 0px;
+          right: -10px;
       }
-#slider-image-2:target ~ .image-holder
+#slider-image-2:target ~ .product__image
        {
-          top: -800px;
+          right: 400px;
        }
 
-#slider-image-3:target ~ .image-holder
+#slider-image-3:target ~ .product__image
       {
-          top: -1600px;
+          right: 800px;
        }
-#slider-image-4:target ~ .image-holder
+#slider-image-4:target ~ .product__image
       {
-           top: -2400px;
+           right: 1200px;
        }
+
 .product__list{
 	display: -webkit-flex;
 	display: -ms-flex;
@@ -166,18 +177,23 @@ body:after{
 	border-radius: 50%;
   border: 1px solid lightgray;
 }
+
 .product__list-items:nth-child(1){
 	background: #1f273f;
 }
+
 .product__list-items:nth-child(2){
 	background: #ffffff;
 }
+
 .product__list-items:nth-child(3){
 	background: #ed3333;
 }
+
 .product__list-items:nth-child(4){
 	background: #29e3ea;
 }
+
 .product__list-items:hover{
 	transition: all .2s;
 	transform: scale(2);
@@ -191,6 +207,7 @@ body:after{
 	display: flex;
 	float: right;
 }
+
 .item{
 	display: -webkit-flex;
 	display: -ms-flex;
@@ -199,6 +216,7 @@ body:after{
 	justify-content: space-between;
 	padding-left:25px;
 }
+
 .item__name{
 	width: 180px;
 	height: 70px;
@@ -209,6 +227,7 @@ body:after{
 	line-height: 26px;
 	letter-spacing: 0.48px;
 }
+
 .item__info{
 	width: 180px;
 	height: 20px;
@@ -253,16 +272,13 @@ body:after{
     color: #ddd;
   }
 
-  .rating-group:hover .rating__input--none:not(:hover) + .rating__label .rating__icon--none {
-     color: #eee;
-  }
-
 
 	/*_Buttons_____________________________________________________*/
 .button__wraper{
 	display: flex;
 	flex-direction:row;
 }
+
 .item__button{
 	width: 69px;
 	height: 32px;
@@ -273,6 +289,7 @@ body:after{
 .item__button--qty{
 	margin-left: 3px;
 }
+
 .item__button--text{
 	width: 100%;
 	height: 100%;
@@ -283,12 +300,14 @@ body:after{
 	line-height: 18px;
 	letter-spacing: 0.28px;
 }
+
 .item__cart .button__cart{
 	width: 184px;
 	height: 40px;
 	border: 1px solid rgba(255, 255, 255, .26);
 	background-color: rgba(17, 26, 40, 0.26);
 }
+
 .item__button:hover{
 	background-color: #4c525a;
 }
